force-app/main/default/objects/open_invoice_summary__x/open_invoice_summary__x.object-meta.xml
<CustomObject>
    <description>open_invoice_summary</description>
    <label>open_invoice_summary</label>
    <pluralLabel>open_invoice_summary</pluralLabel>
</CustomObject>