force-app/main/default/objects/open_invoice_summary__x/fields/customer_name__c.field-meta.xml
<CustomField>
    <fullName>customer_name__c</fullName>
    <description>customer_name</description>
    <label>customer_name</label>
    <length>360</length>
    <type>LongTextArea</type>
</CustomField>