force-app/main/default/objects/open_invoice_summary__x/fields/customer_nbr__c.field-meta.xml
<CustomField>
    <fullName>customer_nbr__c</fullName>
    <description>customer_nbr</description>
    <label>customer_nbr</label>
    <length>30</length>
    <type>Text</type>
</CustomField>