force-app/main/default/objects/open_invoice_summary__x/fields/ID__c.field-meta.xml
<CustomField>
    <fullName>ID__c</fullName>
    <description>ID</description>
    <label>ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>