force-app/main/default/objects/open_invoice_summary__x/fields/invoice_age__c.field-meta.xml
<CustomField>
    <fullName>invoice_age__c</fullName>
    <description>invoice_age</description>
    <label>invoice_age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>